put in thumbnail

--- a/app/views/products/all_products.html.erb
+++ b/app/views/products/all_products.html.erb
@@ -51,9 +51,25 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+
+
+
 <h1>All Products</h1>
-<% @products.each do |product| %>
-  <h2> <%= product.name %> </h2>
-  <p> Price: $<%= product.price %> </p>
-  <img height='100px' src=<%= product.image %> />
-  <%end%>
+
+  <div class="row">
+    <div class="col-sm-6 col-md-4">
+      <% @products.each do |product| %>
+        <div class="thumbnail">  
+        <img src= '<%= product.image %>'/>
+        <div class="caption">
+        <h3><%= product.name %></h3> 
+        <h3>Price $<%= product.price %></h3>
+        <p><%= product.description %></p>
+        <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
+        </div>
+      <%end%>
+      </div>
+    </div>
+  </div>
+
+  
