--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,6 +1,5 @@
   <div class="row">
     <div class="col-sm-6 col-md-4">
-    <% @product %>
     <div class="thumbnail">  
     <img src= '<%= @product.image %>'/>
     <div class="caption">
@@ -14,3 +13,4 @@
       
     </div>
   </div>
+  <p>Back to all <a href= '/products'> products</a></p>
