--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -62,7 +62,7 @@
     <div class="thumbnail">  
     <img src= '<%= product.image %>'/>
     <div class="caption">
-    <h3><%= product.name %></h3> 
+    <h3><a href = '/products/<%= product.id%>'> <%= product.name %></h3></a> 
     <h3>Price $<%= product.price %></h3>
     <p><%= product.description %></p>
     <p><a href="#" class="btn btn-primary" role="button">Buy</a></p>
