--- a/app/assets/stylesheets/products.scss
+++ b/app/assets/stylesheets/products.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the Products controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+body {
+  font-family: Futura,"Trebuchet MS",Arial,sans-serif;
+  background-image: url('cheap_diagonal_fabric.png');
+  }
+
+.well img {
+  width: 100%;
+}
