--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -5,7 +5,11 @@
     <div class="caption">
     <h3><%= @product.name %></h3> 
     <p><%= @product.description %></p>
-    <p text_color=red> <%= @product.sale_message %> </p>
+    <% if @product.discounted? %>
+      <p> Discount Item!! </p>
+      <%else%>
+      <p> Everyday Value </p>
+      <% end %>
     <h3>Price: $<%= @product.price %></h3>
     <p>Tax: $<%= @product.tax %></p>
     <p>Total: $<%= @product.total %> </p>
