--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,8 +30,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/products?sort=price">Sort by price (Low to High)</a></li>
-            <li><a href="/products?sort=price desc">Sort by price (High to Low)</a></li>
+            <li><a href="/products?sort_attribute=price&sort_order=ASC">Sort by price (Low to High)</a></li>
+            <li><a href="/products?sort_attribute=price&sort_order=DESC">Sort by price (High to Low)</a></li>
             <li><a href="/products/discount_items">Discount Items</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">View a Random Product</a></li>
