--- a/app/views/suppliers/index.html.erb
+++ b/app/views/suppliers/index.html.erb
@@ -1,5 +1,5 @@
 <% @suppliers.each do |supplier|%>
-  <%= supplier.name %>
-  <%= supplier.email %>
-  <%= supplier.phone %>
+  <h1><%= supplier.name %></h1>
+  <p><%= supplier.email %></p>
+  <p><%= supplier.phone %></p>
   <% end %>
