added random feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,11 +32,11 @@
           <ul class="dropdown-menu">
             <li><a href="/products?sort_attribute=price&sort_order=ASC">Sort by price (Low to High)</a></li>
             <li><a href="/products?sort_attribute=price&sort_order=DESC">Sort by price (High to Low)</a></li>
-            <li><a href="/products/discount_items">Discount Items</a></li>
+            <li><a href="/products?discount=true">Discount Items</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">View a Random Product</a></li>
+            <li><a href="/products/random">View a Random Product</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="#">?????</a></li>
           </ul>
         </li>
       </ul>
