--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,9 +26,8 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/products/new">Add a Product <span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Search for a Product</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sort/Search<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/products?sort_attribute=price&sort_order=ASC">Sort by price (Low to High)</a></li>
             <li><a href="/products?sort_attribute=price&sort_order=DESC">Sort by price (High to Low)</a></li>
@@ -36,18 +35,27 @@
             <li role="separator" class="divider"></li>
             <li><a href="/products/random">View a Random Product</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">?????</a></li>
+            <li>
+              <%= form_tag "/search", method: :post do %>
+                <%= label_tag :search %>
+                <%= text_field_tag :search %>
+                <%= submit_tag "Submit" %>
+              <% end %>
+            </li>
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left">
-        <div class="form-group">
-          <input type="text" class="form-control" placeholder="Search">
-        </div>
-        <button type="submit" class="btn btn-default">Submit</button>
-      </form>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+        <% if current_user %>
+          <p style="color:red;"> Welcome <%= current_user.name %></p>
+        <% end %> 
+        <% if current_user %>
+          <li><a href="/logout">Logout</a></li>
+        <% else %>
+          <li><a href="/signup">Signup</a></li>
+          <li><a href="/login">Login</a></li>
+        <% end %>
+        
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
