--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -9,8 +9,8 @@
     <%= text_field_tag :price %>
   </div>
   <div>
-    <%= label_tag :image %>
-    <%= text_field_tag :image %>
+    <%= label_tag :url %>
+    <%= text_field_tag :url %>
   </div>
   <div>
     <%= label_tag :description %>
