--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -14,7 +14,7 @@
     <p>Tax: $<%= @product.tax %></p>
     <p>Total: $<%= @product.total %> </p>
     <p>Supplier: <%= @product.supplier.name %> </p>
-    <%= form_tag '/orders', method: :post do %>
+    <%= form_tag '/AddToCart', method: :post do %>
       <div>
         <%= label_tag :quantity %>
         <%= text_field_tag :quantity %>
@@ -22,7 +22,7 @@
       <div>
         <%= hidden_field_tag :product_id, @product.id %>
       </div>
-      <%= submit_tag "Purchase" %>
+      <%= submit_tag "Add to Cart" %>
     <% end %>
   </div> 
   </div>
