--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,8 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="/products/new">Add a Product <span class="sr-only">(current)</span></a></li>
         <li class="dropdown">
+        <li class="active"><a href="/checkout">Checkout<span class="sr-only">(current)</span></a></li>
+        <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sort/Search<span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="/products?sort_attribute=price&sort_order=ASC">Sort by price (Low to High)</a></li>
