added admin authorization

--- a/app/views/products/edit.html.erb
+++ b/app/views/products/edit.html.erb
@@ -10,7 +10,7 @@
   </div>
   <div>
     <%= label_tag :image %>
-    <%= text_field_tag :image, @product.image %>
+    <%= text_field_tag :image, @product.images.first.url %>
   </div>
   <div>
     <%= label_tag :description %>
