--- a/app/views/carted_products/checkout.html.erb
+++ b/app/views/carted_products/checkout.html.erb
@@ -3,6 +3,7 @@
 <% @carted_products.each do |carted_product| %>
   <p> Name: <%= carted_product.product.name %> </p> 
   <p> Quantity: <%= carted_product.quantity %> </p>
+  <%= link_to "Remove from cart", "/carted_products/#{carted_product.id}", method: :delete %>
 <% end %>
 <%= form_tag '/orders', method: :post do %>
       <div>
