--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -77,7 +77,10 @@
 </nav>
     <div class='container'>
       <% flash.each do |name, message| %>
-        <p> <%= message %> </p>
+        <div class="alert alert-<%= name %> alert-dismissible" role="alert">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <%= message %>
+        </div>    
       <% end %>
     </div>
     <%= yield %>
