--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,20 +1,34 @@
 <h1>New Product</h1>
+
+
+<% if @product.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(@product.errors.count, "error") %> prohibited this product from being saved:</h2>
+ 
+    <ul>
+    <% @product.errors.full_messages.each do |msg| %>
+      <li><%= msg %></li>
+    <% end %>
+    </ul>
+  </div>
+<% end %>
+
 <%= form_tag '/products', method: :post do %>
   <div>
     <%= label_tag :name %>
-    <%= text_field_tag :name %>
+    <%= text_field_tag :name, @product.name %>
   </div>
   <div>
     <%= label_tag :price %>
-    <%= text_field_tag :price %>
+    <%= text_field_tag :price, @product.price %>
   </div>
   <div>
     <%= label_tag :url %>
-    <%= text_field_tag :url %>
+    <%= text_field_tag :url, @image.url %>
   </div>
   <div>
     <%= label_tag :description %>
-    <%= text_field_tag :description %>
+    <%= text_field_tag :description, @product.description %>
   </div>
     <%= submit_tag "Add Product" %>
 <% end %>
